# hetic-raylabs

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  Makefile  README.md  conanfile.py  docker-compose.yml  entrypoint.sh
assets/scenes/: ground_with_triangle.json  multiple_spheres.json  sample.json
backups/: conanfile.txt
docs/: architecture.md
src/: CMakeLists.txt
src/app/: main.cpp
src/core/: Camera.hpp  Environment.cpp  Environment.hpp  HitRecord.hpp  Integrator.cpp  Integrator.hpp  PathTracer.cpp  PathTracer.hpp  Ray.hpp  Sampler.cpp  Sampler.hpp  Scene.hpp
src/entities/: Plane.cpp  Plane.hpp  Shape.hpp  Sphere.cpp  Sphere.hpp  Triangle.hpp
src/image/: Image.cpp  Image.hpp
src/io/: JsonSceneLoader.cpp  JsonSceneLoader.hpp  Logger.cpp  Logger.hpp
src/lodepng/: lodepng.cpp  lodepng.h
src/materials/: Checker.hpp  Dielectric.hpp  Lambertian.hpp  Material.hpp  Metal.hpp
src/math/: Color.cpp  Color.hpp  Math_utils.hpp  Vec3.hpp  math_utils.h
src/renderer/: Renderer.cpp  Renderer.hpp
tests/: CMakeLists.txt  test_camera.cpp  test_intersections.cpp  test_intersections_triangle.cpp  test_json_include.cpp  test_json_loader.cpp  test_json_loader_camera.cpp  test_ray.cpp  test_scene.cpp  test_vec3.cpp
